fixed about page

--- a/about.html
+++ b/about.html
@@ -5,8 +5,7 @@ description: The BEAM team is a group of curious minds. STEM background or not, 
 
 <link rel="stylesheet" href="{{ site.baseurl }}/css/about.css">
 
-<div class="content">
-    <center><h1>Our Team</h1></center>
+<div class="content" id="about-content">
       <div id="tiles">
       </div>
 	  <script>
@@ -77,7 +76,7 @@ description: The BEAM team is a group of curious minds. STEM background or not, 
 					  //Committees
 					  htmlExpr += '<h4>' + data[i][2] + '</h4></div>';
 					  //Display image
-					  htmlExpr += '<img src=../images/2019_2020staff/' + data[i][3] + '.jpg id=hello></div>';
+					  htmlExpr += '<img src=../images/2019_2020staff/' + data[i][3] + '.jpg id=staff-pic></div>';
 				  }
 			  }
 		  }
