--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 title: Contact
-heading: 
+heading:
 description: Please reach out to us if you're interested in joining the BEAM family, whether you're a Berkeley student who wants to mentor with us, an elementary or middle school that would love to have us teach, or a company looking to support our efforts through a partnership!
 
 map:
@@ -14,7 +14,7 @@ map:
 
 <div class="contact-box">
 	<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
-		<input type="hidden" name="_to" value="beam.teach@gmail.com" />
+		<input type="hidden" name="_to" value="kaushalpartani@gmail.com" />
 		<input type="text" name="_gotcha" style="display: none;">
 
 		<label for="name">Full Name</label>
@@ -32,7 +32,7 @@ map:
 	<div class="contact-details">
 		<h3 class="editable">Email</h3>
 		<p><a href="mailto:beam.teach@gmail.com">beam.teach@gmail.com</a></p>
-	
+
 		<h3 class="editable">Facebook</h3>
 		<p><a href="https://www.facebook.com/beam.teach/">BEAM</a></p>
 	</div>
