--- a/index.html
+++ b/index.html
@@ -2,16 +2,28 @@
 title: BEAM
 description: Berkeley Engineers and Mentors
 ---
-<section class="hero">
+<!-- <section class="hero">
+		
 	<div class="text-container">
-		<div>
-			<img src="/images/banner.jpg" />
-		</div>
-		<!--<h1 class="editable"> <strong>BEAM</strong></h1>-->
+		
+			
+		
+		
 		<p class="subtext editable">Berkeley Engineers and Mentors</p>
 	</div>
+	
+</section> -->
+<section class = "Logo">
+	<strong>BEAM</strong>
+	<br>
+	bErkElEy enGineeRS aNd MeNtoRs
 </section>
-
+<div id="carousel" class="snap">
+				
+		<div id="carousel-1"><img src="/images/test1.jpg" alt="Screenshot" class="carousel-photo"/></div>
+	<div id="carousel-2"><img src="/images/test2.jpg" alt="Screenshot" class="carousel-photo"/></div>
+	<div id="carousel-3"><img src="/images/test3.jpg" alt="Screenshot" class="carousel-photo"/></div>
+  </div>
 <div class="content">
 	<section>
 		<div class="container flex">
