--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ description: Berkeley Engineers and Mentors
 	
 </section> -->
 <section class = "Logo">
-	<strong>BEAM</strong>
+	<strong id = "acronym">BEAM</strong>
 	<br>
-	bErkElEy enGineeRS aNd MeNtoRs
+	<h1 id = "words">Berkeley Engineers and Mentors</h1>
 </section>
 <div id="carousel" class="snap">
 				
