--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@ description: Berkeley Engineers and Mentors
 	</div>
 	
 </section> -->
-<section class = "Logo">
+<div class = "Logo">
 	<strong id = "acronym">BEAM</strong>
 	<br>
 	<h1 id = "words">Berkeley Engineers and Mentors</h1>
-</section>
-<div id="carousel" class="snap">
+</div>
+<!-- <div id="carousel" class="snap">
 				
 		<div id="carousel-1"><img src="/images/test1.jpg" alt="Screenshot" class="carousel-photo"/></div>
 	<div id="carousel-2"><img src="/images/test2.jpg" alt="Screenshot" class="carousel-photo"/></div>
 	<div id="carousel-3"><img src="/images/test3.jpg" alt="Screenshot" class="carousel-photo"/></div>
-  </div>
+  </div> -->
 <div class="content">
 	<section>
 		<div class="container flex">
@@ -43,9 +43,10 @@ description: Berkeley Engineers and Mentors
 				<h2>What We Do </h2>
 				<p> You can find us at 16 elementary and middle schools in the Berkeley and Oakland area, teaching over 300 students a week.</p>
 			</div>
-			<div class="image">
-				<img src="/images/home-2.jpg" alt="Screenshot" class="screenshot editable" />
-			</div>
+			<div style="height:400px; width:50%;overflow:hidden;">
+					<iframe class="custom-google-map" style="position:relative; top:-50px; border:none;" src="https://www.google.com/maps/d/u/0/embed?mid=1gi79jNNno8pdK5YS-TrusULzVXAYRLjC" width="What Ever Width" height="445"></iframe>
+					</div>
+			
 		</div>
 	</section>
 
