fixed positioning of site map

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ description: Berkeley Engineers and Mentors
 				<h2>What We Do </h2>
 				<p> You can find us at 16 elementary and middle schools in the Berkeley and Oakland area, teaching over 300 students a week.</p>
 			</div>
-			<div style="height:400px; width:50%;overflow:hidden;">
+			<div style="height:400px; width:40%; overflow:hidden; margin-left: 2%">
 					<iframe class="custom-google-map" style="position:relative; top:-50px; border:none;" src="https://www.google.com/maps/d/u/0/embed?mid=1gi79jNNno8pdK5YS-TrusULzVXAYRLjC" width="What Ever Width" height="445"></iframe>
 					</div>
 			
