updated group photos, and added social media links to footer

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@ description: Berkeley Engineers and Mentors
 	
 </section> -->
 <div class = "Logo">
+		
 	<strong id = "acronym">BEAM</strong>
 	<br>
 	<h1 id = "words">Berkeley Engineers and Mentors</h1>
 </div>
+
+
 <!-- <div id="carousel" class="snap">
 				
 		<div id="carousel-1"><img src="/images/test1.jpg" alt="Screenshot" class="carousel-photo"/></div>
@@ -32,7 +35,7 @@ description: Berkeley Engineers and Mentors
 				<p> The purpose of BEAM is to ensure students of all socioeconomic backgrounds a long-term commitment to engaging science and engineering activities which stimulate their interest in pursuing careers in STEM. UC Berkeley students volunteer their time mentoring younger students, learning about science education, and building relationships with their mentees.</p>
 			</div>
 			<div class="image">
-				<img src="/images/home-1.jpg" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/group-pic.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -57,7 +60,7 @@ description: Berkeley Engineers and Mentors
 				<p> Interested in being a part of the BEAM team? Follow us on Facebook for updates about our Fall 2019 infosession! </p>
 			</div>
 			<div class="image">
-				<img src="/images/home-3.jpg" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/group-photo.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
