updated events page

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 title: Contact
 heading:
-description: Please reach out to us if you're interested in joining the BEAM family, whether you're a Berkeley student who wants to mentor with us, an elementary or middle school that would love to have us teach, or a company looking to support our efforts through a partnership!
+description:
 
 map:
   latitude: -45.8787605
@@ -11,7 +11,7 @@ map:
 ---
 <!--<div class="map" id="map"></div>-->
 
-
+<p class="subtext"> Please reach out to us if you're interested in joining the BEAM family, whether you're a Berkeley student who wants to mentor with us, an elementary or middle school that would love to have us teach, or a company looking to support our efforts through a partnership! </p>
 <div class="contact-box">
 	<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
 		<input type="hidden" name="_to" value="kaushalpartani@gmail.com" />
