added scrolldown arrow prompt

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@ description: Berkeley Engineers and Mentors
 	</div>
 	
 </section> -->
-<div class = "Logo">
-		
-	<strong id = "acronym">BEAM</strong>
+<div class="Logo">
+
+	<strong id="acronym">BEAM</strong>
 	<br>
-	<h1 id = "words">Berkeley Engineers and Mentors</h1>
+	<h1 id="words">Berkeley Engineers and Mentors</h1>
+	<br>
+	<a class = "scroll-down" href="#target"></a>
+
 </div>
 
 
@@ -28,11 +31,19 @@ description: Berkeley Engineers and Mentors
 	<div id="carousel-3"><img src="/images/test3.jpg" alt="Screenshot" class="carousel-photo"/></div>
   </div> -->
 <div class="content">
+	<a name="target"></a>
 	<section>
 		<div class="container flex">
 			<div class="text editable">
 				<h2>Who We Are</h2>
-				<p> The purpose of BEAM is to ensure students of all socioeconomic backgrounds a long-term commitment to engaging science and engineering activities which stimulate their interest in pursuing careers in STEM. UC Berkeley students volunteer their time mentoring younger students, learning about science education, and building relationships with their mentees.</p>
+				<p> Berkeley Engineers and Mentors (BEAM) fuses science education with mentorship by leading weekly
+					hands-on science and engineering lessons at local elementary and middle schools. We provide
+					accessible science education to our local communities in hopes of inspiring students of all
+					socioeconomic backgrounds to pursue careers in STEM.
+				</p>
+
+				<!-- !!!remember to change after deploying -->
+				<a class="link" href="about">Read more ></a>
 			</div>
 			<div class="image">
 				<img src="/images/group-pic.jpg" alt="Screenshot" class="screenshot editable" />
@@ -44,12 +55,17 @@ description: Berkeley Engineers and Mentors
 		<div class="container flex">
 			<div class="text editable">
 				<h2>What We Do </h2>
-				<p> You can find us at 16 elementary and middle schools in the Berkeley and Oakland area, teaching over 300 students a week.</p>
+				<p> You can find us at 16 elementary and middle schools in the Berkeley and Oakland area, teaching over
+					300 students a week with our engaging project
+					based science and engineering lessons.</p>
+				<a class="link" href="http://127.0.0.1:4000/lessons/">Read more ></a>
 			</div>
 			<div style="height:400px; width:40%; overflow:hidden; margin-left: 2%">
-					<iframe class="custom-google-map" style="position:relative; top:-50px; border:none;" src="https://www.google.com/maps/d/u/0/embed?mid=1gi79jNNno8pdK5YS-TrusULzVXAYRLjC" width="What Ever Width" height="445"></iframe>
-					</div>
-			
+				<iframe class="custom-google-map" style="position:relative; top:-50px; border:none;"
+					src="https://www.google.com/maps/d/u/0/embed?mid=1gi79jNNno8pdK5YS-TrusULzVXAYRLjC"
+					width="What Ever Width" height="445"></iframe>
+			</div>
+
 		</div>
 	</section>
 
@@ -57,10 +73,10 @@ description: Berkeley Engineers and Mentors
 		<div class="container flex">
 			<div class="text editable">
 				<h2>Join the Family</h2>
-				<p> Interested in being a part of the BEAM team? Follow us on Facebook for updates about our Fall 2019 infosession! </p>
-			</div>
-			<div class="image">
-				<img src="/images/group-photo.jpg" alt="Screenshot" class="screenshot editable" />
+				<p> Interested in being a part of the BEAM team? Follow us on <a href="https://www.facebook.com/beam.teach/">Facebook</a> for updates about our Spring 2020 info session!</p>
+			</div> 
+			<div class=" image">
+						<img src="/images/decal-tower.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
