--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,14 @@ map:
 
 	<div class="contact-details">
 		<h3 class="editable">Email</h3>
+		<p>For general inquiries:</p>
 		<p><a href="mailto:beam.teach@gmail.com">beam.teach@gmail.com</a></p>
+		<p>For partnerships, outreach opportunities, or educational events:</p>
+		<p><a href="mailto:beam.outreach@gmail.com">beam.outreach@gmail.com</a></p>
 	
-		<h3 class="editable">Facebook</h3>
-		<p><a href="https://www.facebook.com/beam.teach/">BEAM</a></p>
+		<h3 class="editable">Social Media</h3>
+		<p><a href="https://www.facebook.com/beam.teach/">Facebook</a></p>
+		<p><a href="https://www.instagram.com/beam_berkeley/">Instagram</a></p>
 	</div>
 </div>
 
