updated about page and added some features need to fix the top navi bar

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 title: Our Team
-description: The BEAM team is a group of curious minds. STEM background or not, mentors love to learn and want to share this love to inspire the next generation of scientists and engineers.
+description: BEAM was founded in 2008 as both a non-profit student organization and DeCal. BEAM is entirely student-run and our 120 mentors, divided into 22 teams, teach a total of 300+ K-8 students every week. BEAM is run by 40 staff members, divided into 6 committees—curriculum, external affairs, logistics, mentor development, outreach, and site leading.
 ---
 
 
@@ -9,7 +9,9 @@ description: The BEAM team is a group of curious minds. STEM background or not, 
 
 <link rel="stylesheet" href="{{ site.baseurl }}/css/about.css">
 
+<div class="break"></div>
 
+<h2> Our Staff </h2>
 <div class="content" id="about-content">
       <div id="tiles">
       </div>
@@ -89,3 +91,43 @@ description: The BEAM team is a group of curious minds. STEM background or not, 
       document.getElementById("tiles").innerHTML += htmlExpr;
       </script>
     </div>
+
+
+  <div class="break"></div>
+
+    <h2> Our Committees </h2>
+    <div class="news-thumbnail" style="text-align:center">
+        <div class="news-content" style="width:25vw;vertical-align:top">
+            <h2 style="font-size:1.5em">Curriculum</h2>
+            <p style="text-align:center;font-size:1em">This committee creates all the lessons we teach for BEAM! This includes not only writing the lesson itself but also testing each hands-on portion of the lesson. Curriculum also facilitates the Final Lesson planning process, guiding each site through the process of writing, testing, and teaching their own lesson.</p>
+        </div>
+
+        <div class="news-content" style="width:25vw;vertical-align:top">
+            <h2 style="font-size:1.5em">External Affairs</h2>
+            <p style="text-align:center;font-size:1em">External Affairs manages BEAM’s finances and public relations. On the finance side, they manage our semesterly budget, secure funding sources from scholarships, grants, and campus departments, and look for ways to cut our costs. EA manages the Facebook page, Instagram account, and website to increase the public’s exposure to the work we do.</p>
+        </div>
+
+        <div class="news-content" style="width:25vw;vertical-align:top">
+            <h2 style="font-size:1.5em">Logistics</h2>
+            <p style="text-align:center;font-size:1em">This committee is responsible for all the materials BEAM uses for its lessons. Logistics works with curriculum to ensure that the proposed materials are within budget, then purchases the materials and distributes them into the boxes that we take to site each week. Logistics also manages our overall inventory of materials so that materials are organized, easily accessible, and can be reused between semesters.  </p>
+        </div>
+
+        <div class="news-content" style="width:25vw;vertical-align:top">
+            <h2 style="font-size:1.5em">Site Leading</h2>
+            <p style="text-align:center;font-size:1em">This committee is made up of the site leaders and the two site coordinators. Site Leaders facilitate the weekly lessons at one of BEAM’s partner schools each semester while developing the mentors teaching under them. Our site coordinators act as a liaison between BEAM and all of its partner schools and facilitate conversations between site leaders to improve teaching across the board.</p>
+        </div>
+
+        <div class="news-content" style="width:25vw;vertical-align:top">
+            <h2 style="font-size:1.5em">Mentor Development</h2>
+            <p style="text-align:center;font-size:1em">MD is responsible for the overall quality of BEAM’s mentorship. They organize various presentations and activities throughout the semester covering topics such as classroom management tips, teaching philosophies, and reflection projects to help facilitate mentors’ growth.</p>
+        </div>
+
+        <div class="news-content" style="width:25vw;vertical-align:top">
+            <h2 style="font-size:1.5em">Outreach</h2>
+            <p style="text-align:center;font-size:1em"> Outreach is responsible for ensuring that BEAM is a positive community where people are able to bond with each other and grow outside of the classroom. They organize internal socials and connect mentors with outside volunteering opportunities like Discovery Days, SPLASH, E4K, and Cal Day.</p>
+        </div>
+
+    </div>
+
+
+    <div class="break"></div>
