--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@ title: BEAM
 description: Berkeley Engineers and Mentors
 ---
 <!-- <section class="hero">
-		
+
 	<div class="text-container">
-		
-			
-		
-		
+
+
+
+
 		<p class="subtext editable">Berkeley Engineers and Mentors</p>
 	</div>
-	
+
 </section> -->
 
 <div class="Logo">
@@ -26,18 +26,18 @@ description: Berkeley Engineers and Mentors
 
 
 <!-- <div id="carousel" class="snap">
-				
+
 		<div id="carousel-1"><img src="/images/test1.jpg" alt="Screenshot" class="carousel-photo"/></div>
 	<div id="carousel-2"><img src="/images/test2.jpg" alt="Screenshot" class="carousel-photo"/></div>
 	<div id="carousel-3"><img src="/images/test3.jpg" alt="Screenshot" class="carousel-photo"/></div>
   </div> -->
-<div class="content">
+<div class="content" style = "flex-direction: row;">
 	<a name="target"></a>
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>Who We Are</h2>
-				<p> Berkeley Engineers and Mentors (BEAM) fuses science education with mentorship by leading weekly
+				<h2 class = "header">Who We Are</h2>
+				<p class = "body"> Berkeley Engineers and Mentors (BEAM) fuses science education with mentorship by leading weekly
 					hands-on science and engineering lessons at local elementary and middle schools. We provide
 					accessible science education to our local communities in hopes of inspiring students of all
 					socioeconomic backgrounds to pursue careers in STEM.
@@ -47,7 +47,7 @@ description: Berkeley Engineers and Mentors
 				<a class="link" href="about">Read more ></a>
 			</div>
 			<div class="image">
-				<img src="/images/group-pic.jpg" alt="Screenshot" class="screenshot editable" />
+				<img  src="/images/group-pic.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -55,8 +55,8 @@ description: Berkeley Engineers and Mentors
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>What We Do </h2>
-				<p> You can find us at 16 elementary and middle schools in the Berkeley and Oakland area, teaching over
+				<h2 class = "header">What We Do </h2>
+				<p class = "body"> You can find us at 16 elementary and middle schools in the Berkeley and Oakland area, teaching over
 					300 students a week with our engaging project
 					based science and engineering lessons.</p>
 				<a class="link" href="http://127.0.0.1:4000/lessons/">Read more ></a>
@@ -73,9 +73,9 @@ description: Berkeley Engineers and Mentors
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>Join the Family</h2>
-				<p> Interested in being a part of the BEAM team? Follow us on <a href="https://www.facebook.com/beam.teach/">Facebook</a> for updates about our Spring 2020 info session!</p>
-			</div> 
+				<h2 class = "header">Join the Family</h2>
+				<p class = "body"> Interested in being a part of the BEAM team? Follow us on <a href="https://www.facebook.com/beam.teach/">Facebook</a> for updates about our Spring 2020 info session!</p>
+			</div>
 			<div class=" image">
 						<img src="/images/decal-tower.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
